--- a/app/src/main/res/layout-ar/contact_main_loggedin.xml
+++ b/app/src/main/res/layout-ar/contact_main_loggedin.xml
@@ -122,12 +122,12 @@
 
 
         <LinearLayout
+            android:id="@+id/llInfo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:background="@color/gray2"
             android:orientation="vertical"
-
             >
 
             <TextView
@@ -141,10 +141,11 @@
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/tvEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="ideas2techs@gmail.com2"
+                android:text="ideas2techs@gmail.com"
                 android:textColor="#FFFFFF"
                 android:textSize="17sp"
                 android:textStyle="bold"
@@ -152,6 +153,7 @@
                 />
 
             <TextView
+                android:id="@+id/tvMobile"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
