--- a/app/src/main/res/layout/contact_main_notloggedin.xml
+++ b/app/src/main/res/layout/contact_main_notloggedin.xml
@@ -185,13 +185,12 @@
 
 
         <LinearLayout
+            android:id="@+id/llInfo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:background="@color/gray2"
-            android:orientation="vertical"
-
-            >
+            android:orientation="vertical">
 
             <TextView
                 android:layout_width="match_parent"
@@ -204,10 +203,11 @@
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/tvEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="ideas2techs@gmail.com2"
+                android:text="ideas2techs@gmail.com"
                 android:textColor="#FFFFFF"
                 android:textSize="17sp"
                 android:textStyle="bold"
@@ -215,6 +215,7 @@
                 />
 
             <TextView
+                android:id="@+id/tvMobile"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
