--- a/app/src/main/res/layout/order_now.xml
+++ b/app/src/main/res/layout/order_now.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/rlMainOrderNow"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
-    android:id="@+id/rlMainOrderNow"
     android:orientation="vertical">
 
     <!--<com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner-->
@@ -80,7 +80,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/tvDataNotExist"
             android:layout_centerInParent="true"
-            android:text="Retry"
+            android:text="@string/retry"
             android:textColor="@color/logo"
             android:textStyle="bold"
 
