--- a/app/src/main/res/layout/project_item.xml
+++ b/app/src/main/res/layout/project_item.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:gravity="center_horizontal"
+    android:orientation="vertical"
     >
 
     <TextView
@@ -14,6 +14,7 @@
         android:layout_margin="2dp"
         android:background="@drawable/round_rect_shape"
         android:padding="10dp"
+        android:scrollbars="vertical"
         android:text="Web Design bla bla bla"
 
         />
